--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./js/lib/fullpage/zepto.fullpage.css">
     <link rel="stylesheet" href="./js/lib/select/select.css">
     <link rel="stylesheet" href="./js/lib/dialog/dialog.css">
     <link rel="stylesheet" href="./css/aggree.css">
@@ -15,88 +14,91 @@
 
 <body>
     <div class="wp">
-        <div class="wp-inner">
-            <div class="page page1">
-                <img class="page1-light" src="./images/page1/light.png" alt="">
-                <img class="center-img bank-of-cupple" src="./images/page1/bank-of-cupple.png" alt="">
-                <img class="center-img story-bank" src="./images/page1/story-bank.png" alt="">
-                <img class="center-img story-text" src="./images/page1/story-text.png" alt="">
-                <img class="center-img one-cupple" src="./images/page1/one-cupple.png" alt="">
-                <img class="center-img arrow-down" src="./images/page1/arrow-down.png" alt="">
-            </div>
-            <div class="page page2">
-                <div class="center-img form-text">
-                    <div class="center-img form-detail">
-                        <textarea id="story" class="center-img form-input" name="" id="" cols="30" rows="10" placeholder='故事请从这里写起。如果你想和读到故事的人成为朋友，可以在末尾留下你的联系方式。'></textarea>
-                        <div class="form-item">
-                            <div class="item-left">
-                                <div class="item-tag">昵称</div>
-                                <input id="name" class="item-input" type="text" />
-                            </div>
-                            <div class="item-right">
-                                <div class="item-tag">城市</div>
-                                <input id="city" class="item-input" type="text" />
-                            </div>
-                        </div>
-                        <div class="form-item">
-                            <div class="item-left">
-                                <div class="item-tag">星座</div>
-                                <select name="select" class="item-select" id="select1">
-                                    <option value="0" selected="selected">请选择</option>
-                                    <option value="1">魔羯座</option>
-                                    <option value="2">水瓶座</option>
-                                    <option value="3">双鱼座</option>
-                                    <option value="4">白羊座</option>
-                                    <option value="5">金牛座</option>
-                                    <option value="6">双子座</option>
-                                    <option value="7">巨蟹座</option>
-                                    <option value="8">狮子座</option>
-                                    <option value="9">处女座</option>
-                                    <option value="10">天秤座</option>
-                                    <option value="11">天蝎座</option>
-                                    <option value="12">射手座</option>
-                                </select>
-                            </div>
-                            <div class="item-right">
-                                <div class="item-tag">性别</div>
-                                <select name="select" class="item-select" id="select2">
-                                    <option value="0" selected="selected">请选择</option>
-                                    <option value="1">男</option>
-                                    <option value="2">女</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="center-img submit" onclick="submit()">提交故事</div>
-                <div class="center-img aggree">
-                    <img class="aggree-img" src="./images/page2/pressed.png" alt="">
-                    <div class="aggree-text" onclick="aggressShow()">我已阅读并同意《用户协议》</div>
-                </div>
-                <div id="confirm" class="center-img confirm">
-                    <div class="confirm-header">确定要存入故事吗？</div>
-                    <div class="confirm-footer">
-                        <div class="confirm-footer-left" onclick="drop()">返回修改</div>
-                        <div class="confirm-footer-right" onclick="saveStory()">确认存入</div>
-                    </div>
-                </div>
-                <div id="modal-aggree">
 
+
+        <div class="page page1">
+            <img class="page1-light" src="./images/page1/light.png" alt="">
+            <img class="center-img bank-of-cupple" src="./images/page1/bank-of-cupple.png" alt="">
+            <img class="center-img story-bank" src="./images/page1/story-bank.png" alt="">
+            <img class="center-img story-text" src="./images/page1/story-text.png" alt="">
+            <img class="center-img one-cupple" src="./images/page1/one-cupple.png" alt="">
+            <img class="center-img arrow-down" src="./images/page1/arrow-down.png" alt="">
+        </div>
+        <div class="page page2">
+            <div class="center-img form-text">
+                <div class="center-img form-detail">
+                    <textarea id="story" class="center-img form-input" name="" id="" cols="30" rows="10" placeholder='故事请从这里写起。如果你想和读到故事的人成为朋友，可以在末尾留下你的联系方式。'></textarea>
+                    <div class="form-item">
+                        <div class="item-left">
+                            <div class="item-tag">昵称</div>
+                            <input id="name" class="item-input" type="text" />
+                        </div>
+                        <div class="item-right">
+                            <div class="item-tag">城市</div>
+                            <input id="city" class="item-input" type="text" />
+                        </div>
+                    </div>
+                    <div class="form-item">
+                        <div class="item-left">
+                            <div class="item-tag">星座</div>
+                            <select name="select" class="item-select" id="select1">
+                                <option value="0" selected="selected">请选择</option>
+                                <option value="1">魔羯座</option>
+                                <option value="2">水瓶座</option>
+                                <option value="3">双鱼座</option>
+                                <option value="4">白羊座</option>
+                                <option value="5">金牛座</option>
+                                <option value="6">双子座</option>
+                                <option value="7">巨蟹座</option>
+                                <option value="8">狮子座</option>
+                                <option value="9">处女座</option>
+                                <option value="10">天秤座</option>
+                                <option value="11">天蝎座</option>
+                                <option value="12">射手座</option>
+                            </select>
+                        </div>
+                        <div class="item-right">
+                            <div class="item-tag">性别</div>
+                            <select name="select" class="item-select" id="select2">
+                                <option value="0" selected="selected">请选择</option>
+                                <option value="1">男</option>
+                                <option value="2">女</option>
+                            </select>
+                        </div>
+                    </div>
                 </div>
+            </div>
+            <div class="center-img submit" onclick="submit()">提交故事</div>
+            <div class="center-img aggree">
+                <img class="aggree-img" src="./images/page2/pressed.png" alt="">
+                <div class="aggree-text" onclick="aggressShow()">我已阅读并同意《用户协议》</div>
+            </div>
+            <div id="confirm" class="center-img confirm">
+                <div class="confirm-header">确定要存入故事吗？</div>
+                <div class="confirm-footer">
+                    <div class="confirm-footer-left" onclick="drop()">返回修改</div>
+                    <div class="confirm-footer-right" onclick="saveStory()">确认存入</div>
+                </div>
+            </div>
+            <div id="modal-aggree">
+
             </div>
         </div>
     </div>
 </body>
 <script src="./js/lib/zepto.min.js"></script>
-<script src="./js/lib/fullpage/zepto.fullpage.js"></script>
 <script src="./js/lib/select/select.js"></script>
 <script src="./js/lib/dialog/dialog.js"></script>
 <script src="./js/scrollTo.js"></script>
 <script>
     var xinzuo = null;
     var xingbie = null;
+    var startX = 0,
+        startY = 0,
+        isUp = false;
     $(document).ready(function () {
-        $('.wp-inner').fullpage();
+        // $('.wp-inner').fullpage();
+        bindEvent();
         var select1 = new Select();
         var select2 = new Select();
         select1.init({
@@ -112,7 +114,8 @@
             }
         });
         $('.arrow-down').click(function () {
-            $('.wp-inner').css({ transform: 'translate3d(0px, -' + document.body.offsetHeight + 'px, 0px);' })
+            $('.page1').css('top', '-100%');
+            $('.page2').css('top', '0');
         })
     });
 
@@ -207,6 +210,63 @@
                 $('#modal-aggree').empty();
             })
         })
+    }
+
+    function touchStart(evt) {
+        try {
+            var touch = evt.touches[0], //获取第一个触点
+                x = Number(touch.pageX), //页面触点X坐标
+                y = Number(touch.pageY); //页面触点Y坐标
+            //记录触点初始位置
+            startX = x;
+            startY = y;
+        } catch (e) {
+            console.log(e.message)
+        }
+    }
+
+    function touchMove(evt) {
+        console.log(evt.target.className)
+        const targetClass = evt.target.className;
+        const disableClass = ['ui-select-item', 'ui-select-item ui-select-item-selected'];
+        if (disableClass.includes(targetClass)) {
+            return false;
+        }
+        if ($(evt.target).parents().hasClass('g-modal-mask')) {
+            return false;
+        }
+        try {
+            var touch = evt.touches[0], //获取第一个触点
+                x = Number(touch.pageX), //页面触点X坐标
+                y = Number(touch.pageY); //页面触点Y坐标
+            //判断滑动方向
+            if (y - startY > 0) {
+                console.log('下滑了！');
+                isUp = false;
+            } else {
+                console.log('上滑了！');
+                isUp = true;
+            }
+        } catch (e) {
+            console.log(e.message)
+        }
+    }
+
+    function touchEnd(evt) {
+        if (isUp) {
+            $('.page1').css('top', '-100%');
+            $('.page2').css('top', '0');
+        } else {
+            $('.page1').css('top', '0');
+            $('.page2').css('top', '100%');
+        }
+    }
+
+    //绑定事件
+    function bindEvent() {
+        document.addEventListener('touchstart', touchStart, false);
+        document.addEventListener('touchmove', touchMove, false);
+        document.addEventListener('touchend', touchEnd, false);
     }
 </script>
 
