--- a/result.html
+++ b/result.html
@@ -23,8 +23,7 @@
 <script src="./js/lib/zepto.min.js"></script>
 <script>
     $(function () {
-        // let url = 'https://story.cuppieme.com.cn/index';
-        let url = 'https://www.easy-mock.com/mock/5b7cd4ebc00f650b09885966/test';
+        let url = 'https://story.cuppieme.com.cn/index';
         $.get(url + '/story_no', function (res) {
             if (res.code === 200) {
                 $('#number').html(res.data)
