--- a/aggree.html
+++ b/aggree.html
@@ -1,6 +1,10 @@
 <div class="g-modal-mask txc">
     <div class="m-protocol-window">
         <div class="wrap">
+            <div class="m-protocol-header">
+                <img class="center-img header-group" src="./images/aggree/group.png" alt="">
+                <img class="center-img header-logo" src="./images/aggree/logo.png" alt="">
+            </div>
             <div class="m-protocol-scroll">
                 <p>感谢使用南京壹杯青年餐饮管理有限公司（下列简称“壹杯青年”）提供的服务。请您（下列简称为“用户”）仔细阅读本《故事征集活动用户协议》（下列简称“本协议”），未成年人则应在法定监护人陪同下阅读，确保用户充分理解各协议内容，并选择接受或不接受本协议。当您按照页面提示填写信息、阅读并勾选“我已阅读并同意《用户协议》”后，即表示用户已充分阅读、理解并同意接受本协议全部内容的约束，承诺接受并遵守本协议的约定。此后，用户不得以未阅读本协议协议内容作任何形式的抗辩。</p>
                 <p>1、协议的确认和接纳</p>
