--- a/aggree.html
+++ b/aggree.html
@@ -49,6 +49,6 @@
                 <p>如果用户对本协议内容有任何疑问，请发送邮件至我们的客服邮箱：（<a href="mailto:service@cuppie.me" style="color: rgb(255, 255, 255); user-select: all;">service@cuppie.me</a>）。</p>
             </div>
         </div>
-        <div id="close-modal" class="m-agree-btn btn2"></div>
+        <div id="close-modal" class="m-agree-btn">我已阅读</div>
     </div>
 </div>
