--- a/aggree.html
+++ b/aggree.html
@@ -46,7 +46,7 @@
                 <p>本协议如在履行过程中发生争议，由双方协商解决；协商不成的，如出现纠纷，您和壹杯青年一致同意将纠纷提交南京仲裁委员会根据其现行有效的仲裁规则进行仲裁。仲裁裁决是终局性的，对双方都有约束力。仲裁费用由败诉一方承担。</p>
                 <p>除非另有证明，壹杯青年储存在其服务器上的数据是您使用壹杯青年产品或服务的唯一有效证据。</p>
                 <p>本协议自发布之日起实施，并构成用户和壹杯青年之间的共识。壹杯青年不行使、未能及时行使或者未充分行使本协议或者按照法律规定所享有的权利，不应被视为放弃该权利，也不影响壹杯青年在将来行使该权利。</p>
-                <p>如果用户对本协议内容有任何疑问，请发送邮件至我们的客服邮箱：（<a href="mailto:service@cuppie.me" style="color: rgb(255, 255, 255); user-select: all;">service@cuppie.me</a>）。</p>
+                <p>如果用户对本协议内容有任何疑问，请发送邮件至我们的客服邮箱：（<a href="mailto:service@cuppie.me" style="color: #333333; user-select: all;">service@cuppie.me</a>）。</p>
             </div>
         </div>
         <div id="close-modal" class="m-agree-btn">我已阅读</div>
