--- a/alert.html
+++ b/alert.html
@@ -1,5 +1,11 @@
 <div class="g-modal-mask txc">
     <div class="m-protocol-window">
-        
+        <div id="confirm" class="center-img confirm">
+            <div class="confirm-header">确定要存入故事吗？</div>
+            <div class="confirm-footer">
+                <div class="confirm-footer-left">返回修改</div>
+                <div class="confirm-footer-right">确认存入</div>
+            </div>
+        </div>
     </div>
 </div>
