--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <img class="center-img success" src="./images/page4/success.png" alt="">
                     <div class="center-img success-text">存入成功!</div>
                     <div class="center-img success-number">
-                        你是第<span class="success-value"></span>个存入故事的人<br />欢迎到CUPPIEME线下门店体验故事柜员机
+                        你是第<span class="success-value"></span>个存入故事的人<br />欢迎到CUPPIEME<a href="http://www.dianping.com/shop/111863906">线下门店</a>体验故事柜员机
                     </div>
                     <img class="center-img logo" src="./images/page4/store.png" alt="">
                     <img class="center-img logo2" src="./images/page4/one-cupple.png" alt="">
@@ -101,6 +101,7 @@
     var startX = 0,
         startY = 0,
         isUp = false;
+    isDown = false;
     var isAggree = true;
     var stopScroll = false;
     $(function () {
@@ -281,30 +282,27 @@
         console.log(evt.target.className)
         const targetClass = evt.target.className;
         const disableClass = ['ui-select-item', 'ui-select-item ui-select-item-selected'];
-        if (disableClass.includes(targetClass)) {
-            return false;
-        }
-        if ($(evt.target).parents().hasClass('g-modal-mask')) {
-            return false;
-        }
-        if (stopScroll) {
-            return false;
-        }
-        try {
-            var touch = evt.touches[0], //获取第一个触点
-                x = Number(touch.pageX), //页面触点X坐标
-                y = Number(touch.pageY); //页面触点Y坐标
-            //判断滑动方向
-            if (y - startY > 50) {
-                console.log('下滑了！');
-                isUp = false;
+        if (disableClass.includes(targetClass) || $(evt.target).parents().hasClass('g-modal-mask') || stopScroll) {
+
+        } else {
+            try {
+                var touch = evt.touches[0], //获取第一个触点
+                    x = Number(touch.pageX), //页面触点X坐标
+                    y = Number(touch.pageY); //页面触点Y坐标
+                //判断滑动方向
+                if (y - startY > 50) {
+                    console.log('下滑了！');
+                    isUp = false;
+                    isDown = true;
+                }
+                if (startY - y > 50) {
+                    console.log('上滑了！');
+                    isUp = true;
+                    isDown = false;
+                }
+            } catch (e) {
+                console.log(e.message)
             }
-            if (startY - y > 50) {
-                console.log('上滑了！');
-                isUp = true;
-            }
-        } catch (e) {
-            console.log(e.message)
         }
     }
 
@@ -312,7 +310,7 @@
         if (isUp) {
             $('.page1').css('top', '-100%');
             $('.page2').css('top', '0');
-        } else {
+        } else if (isDown) {
             $('.page1').css('top', '0');
             $('.page2').css('top', '100%');
             $('.ui-select').hide();
@@ -321,9 +319,14 @@
 
     //绑定事件
     function bindEvent() {
-        document.addEventListener('touchstart', touchStart, false);
-        document.addEventListener('touchmove', touchMove, false);
-        document.addEventListener('touchend', touchEnd, false);
+        document.addEventListener('touchmove', function (evt) {
+            if ($(evt.target).parents().hasClass('page2') && !$(evt.target).parents().hasClass('m-protocol-scroll')) {
+                evt.preventDefault();
+            }
+        })
+        document.body.addEventListener('touchstart', touchStart, false);
+        document.body.addEventListener('touchmove', touchMove, false);
+        document.body.addEventListener('touchend', touchEnd, false);
     }
 </script>
 
